--- a/index.html
+++ b/index.html
@@ -1,193 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Job Listings</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  <!-- Item Start -->
-  Photosnap
-  New!
-  Featured
-  Senior Frontend Developer
-  1d ago
-  Full Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Senior
-  <!-- Languages -->
-  HTML
-  CSS
-  JavaScript
-  <!-- Item End -->
+    <title>Frontend Mentor | Job Listings</title>
 
-  <!-- Item Start -->
-  Manage
-  New!
-  Featured
-  Fullstack Developer
-  1d ago
-  Part Time
-  Remote
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  Python
-  <!-- Tools -->
-  React
-  <!-- Item End -->
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <link rel="stylesheet" href="style.css" />
+    <script src="app.js"></script>
+  </head>
+  <body>
+    <div class="header"></div>
+    <!-- Item Start -->
+    <div class="job-listing">
+      <div class="job-info">
+        <div class="company-img">
+          <img src="images/photosnap.svg" alt="" />
+        </div>
+        <div class="job-description">
+          <span class="company">Photosnap</span>
+          <span class="new">New!</span>
+          <span class="featured">Featured</span>
+          <p><strong>Senior Frontend Developer</strong></p>
+          <div class="extra-info">
+            <span>1d ago </span>
+            <span>*</span>
+            <span>Full Time </span>
+            <span>*</span>
+            <span>USA only</span>
+          </div>
+          <!-- <span class="extra-info">  </span> -->
+        </div>
+      </div>
+      <!-- Role -->
+      <div class="tags">
+        <span> Frontend</span>
 
-  <!-- Item Start -->
-  Account
-  New!
-  Junior Frontend Developer
-  2d ago
-  Part Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  React
-  Sass
-  <!-- Item End -->
+        <!-- Level -->
+        <span>Senior</span>
 
-  <!-- Item Start -->
-  MyHome
-  Junior Frontend Developer
-  5d ago
-  Contract
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  CSS
-  JavaScript
-  <!-- Item End -->
+        <!-- Languages -->
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>JavaScript</span>
+      </div>
+      <!-- Item End -->
+    </div>
 
-  <!-- Item Start -->
-  Loop Studios
-  Software Engineer
-  1w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  JavaScript
-  Ruby
-  <!-- Tools -->
-  Sass
-  <!-- Item End -->
+    <h1>SEPARATE</h1>
+    <!-- Item Start -->
+    Manage New! Featured Fullstack Developer 1d ago Part Time Remote
+    <!-- Role -->
+    Fullstack
+    <!-- Level -->
+    Midweight
+    <!-- Languages -->
+    Python
+    <!-- Tools -->
+    React
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  FaceIt
-  Junior Backend Developer
-  2w ago
-  Full Time
-  UK only
-  <!-- Role -->
-  Backend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  Ruby
-  <!-- Tools -->
-  RoR
-  <!-- Item End -->
+    <!-- Item Start -->
+    Account New! Junior Frontend Developer 2d ago Part Time USA only
+    <!-- Role -->
+    Frontend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    JavaScript
+    <!-- Tools -->
+    React Sass
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  Shortly
-  Junior Developer
-  2w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  HTML
-  JavaScript
-  <!-- Tools -->
-  Sass
-  <!-- Item End -->
+    <!-- Item Start -->
+    MyHome Junior Frontend Developer 5d ago Contract USA only
+    <!-- Role -->
+    Frontend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    CSS JavaScript
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  Insure
-  Junior Frontend Developer
-  2w ago
-  Full Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  Vue
-  Sass
-  <!-- Item End -->
+    <!-- Item Start -->
+    Loop Studios Software Engineer 1w ago Full Time Worldwide
+    <!-- Role -->
+    Fullstack
+    <!-- Level -->
+    Midweight
+    <!-- Languages -->
+    JavaScript Ruby
+    <!-- Tools -->
+    Sass
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  Eyecam Co.
-  Full Stack Engineer
-  3w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  JavaScript
-  Python
-  <!-- Tools -->
-  Django
-  <!-- Item End -->
+    <!-- Item Start -->
+    FaceIt Junior Backend Developer 2w ago Full Time UK only
+    <!-- Role -->
+    Backend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    Ruby
+    <!-- Tools -->
+    RoR
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  The Air Filter Company
-  Front-end Dev
-  1mo ago
-  Part Time
-  Worldwide
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  React
-  Sass
-  <!-- Item End -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <!-- Item Start -->
+    Shortly Junior Developer 2w ago Full Time Worldwide
+    <!-- Role -->
+    Frontend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    HTML JavaScript
+    <!-- Tools -->
+    Sass
+    <!-- Item End -->
+
+    <!-- Item Start -->
+    Insure Junior Frontend Developer 2w ago Full Time USA only
+    <!-- Role -->
+    Frontend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    JavaScript
+    <!-- Tools -->
+    Vue Sass
+    <!-- Item End -->
+
+    <!-- Item Start -->
+    Eyecam Co. Full Stack Engineer 3w ago Full Time Worldwide
+    <!-- Role -->
+    Fullstack
+    <!-- Level -->
+    Midweight
+    <!-- Languages -->
+    JavaScript Python
+    <!-- Tools -->
+    Django
+    <!-- Item End -->
+
+    <!-- Item Start -->
+    The Air Filter Company Front-end Dev 1mo ago Part Time Worldwide
+    <!-- Role -->
+    Frontend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    JavaScript
+    <!-- Tools -->
+    React Sass
+    <!-- Item End -->
+
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </body>
 </html>
