Added job listing through javascript

--- a/index.html
+++ b/index.html
@@ -16,46 +16,47 @@
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <link rel="stylesheet" href="style.css" />
-    <script src="app.js"></script>
+    <script defer src="app.js"></script>
   </head>
   <body>
     <div class="header"></div>
     <!-- Item Start -->
-    <div class="job-listing">
-      <div class="job-info">
-        <div class="company-img">
-          <img src="images/photosnap.svg" alt="" />
-        </div>
-        <div class="job-description">
-          <span class="company">Photosnap</span>
-          <span class="new">New!</span>
-          <span class="featured">Featured</span>
-          <p><strong>Senior Frontend Developer</strong></p>
-          <div class="extra-info">
-            <span>1d ago </span>
-            <span>*</span>
-            <span>Full Time </span>
-            <span>*</span>
-            <span>USA only</span>
+    <div class="job-container">
+      <div class="job-listing">
+        <div class="job-info">
+          <div class="company-img">
+            <img src="images/photosnap.svg" alt="" />
           </div>
-          <!-- <span class="extra-info">  </span> -->
+          <div class="job-description">
+            <span class="company">Photosnap</span>
+            <span class="new">New!</span>
+            <span class="featured">Featured</span>
+            <p><strong>Senior Frontend Developer</strong></p>
+            <div class="extra-info">
+              <span>1d ago </span>
+              <span>*</span>
+              <span>Full Time </span>
+              <span>*</span>
+              <span>USA only</span>
+            </div>
+            <!-- <span class="extra-info">  </span> -->
+          </div>
         </div>
-      </div>
-      <!-- Role -->
-      <div class="tags">
-        <span> Frontend</span>
+        <!-- Role -->
+        <div class="tags">
+          <span> Frontend</span>
 
-        <!-- Level -->
-        <span>Senior</span>
+          <!-- Level -->
+          <span>Senior</span>
 
-        <!-- Languages -->
-        <span>HTML</span>
-        <span>CSS</span>
-        <span>JavaScript</span>
+          <!-- Languages -->
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>JavaScript</span>
+        </div>
+        <!-- Item End -->
       </div>
-      <!-- Item End -->
     </div>
-
     <h1>SEPARATE</h1>
     <!-- Item Start -->
     Manage New! Featured Fullstack Developer 1d ago Part Time Remote
