Added function to render tags in filter section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <div class="header"></div>
     <!-- Item Start -->
     <div class="job-container">
+      <div class="filter-section">
+        <span class="filter-items"></span>
+      </div>
       <div class="job-listing">
         <div class="job-info">
           <div class="company-img">
