Added clear button and added an if statement to check if the tag/filter is already applied or not

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <!-- Item Start -->
     <div class="job-container">
       <div class="filter-section">
-        <span class="filter-items"></span>
+        <div class="filter-tags">
+          <span class="filter-items"></span>
+        </div>
+        <button class="clear-filters">Clear</button>
       </div>
       <div class="job-listing">
         <div class="job-info">
