--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="filter-tags">
           <span class="filter-items"></span>
         </div>
-        <button class="clear-filters">Clear</button>
+        <button onClick="clearAll()" class="clear-filters">Clear</button>
       </div>
       <div class="job-listing">
         <div class="job-info">
