--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <link rel="stylesheet" href="style.css" />
+    <script defer src="data.js"></script>
     <script defer src="app.js"></script>
   </head>
   <body>
