Styled filter section and added horizontal line above tags

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="job-container">
       <div class="filter-section">
         <div class="filter-tags">
-          <span class="filter-items"></span>
+          <div class="filter-items"></div>
         </div>
         <button onClick="clearAll()" class="clear-filters hidden">Clear</button>
       </div>
